--- a/doc/HOWTO-QuickInstall_1.1
+++ b/doc/HOWTO-QuickInstall_1.1
@@ -128,7 +128,7 @@ Either way, you will end up with your compiled binaries in `CBENCHOME/bin` as we
 
 Your testing tree contains copies of the original `cbench.pl`, `cluster.def`, and test binaries from `$CBENCHOME` so that you can customize each testing tree as desired without affecting the original source files (useful for creating new testing trees later on).
 
-You now have a fully-functional Cbench testing tree.  You move on and [wiki:RunTestHowTo run tests], or you can install non-default tests by continuing on below.
+You now have a fully-functional Cbench testing tree.  You move on and [wiki:doc/HOWTO-RunTestHowTo_1.1 run tests], or you can install non-default tests by continuing on below.
 
 == Install Non-Default Tests ==
 
@@ -195,4 +195,5 @@ Note: this currently requires the Sandia-only `nodeperf2` file as well!
 
 == Installation Summary ==
 
-Hopefully things have gone smoothly up to this point.  Feel free to move on to move on and [wiki:RunTestHowTo run tests].
+Hopefully things have gone smoothly up to this point.  Feel free to move on to move on and [wiki:doc/HOWTO-RunTestHowTo_1.1 run tests].
+ 	  	 
